kardinal-demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kardinal-demo-stable
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: kardinal-demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                # Reference to a Service name, also specified in the Rollout spec.strategy.canary.stableService field
                name: frontend
                port:
                  number: 80
